--- a/java/whcdit-tlbb-ele/tlbb.ini
+++ b/java/whcdit-tlbb-ele/tlbb.ini
@@ -1,5 +1,10 @@
 {
-  "name": "街道口的风",
+  "name": "街道口的风34",
   "width": 600,
-  "height": 800
+  "height": 800,
+  "mousex": 300,
+  "mousey": 300,
+  "stepx": 50,
+  "stepy": 50,
+  "loops": 1
 }
