--- a/java/whcdit-tlbb-ele/tlbb.ini
+++ b/java/whcdit-tlbb-ele/tlbb.ini
@@ -1,10 +1,14 @@
 {
-  "name": "街道口的风34",
-  "width": 600,
+  "name": "街道口的风",
+  "width": 500,
   "height": 800,
-  "mousex": 300,
-  "mousey": 300,
+  "mousex": 333,
+  "mousey": 333,
   "stepx": 50,
   "stepy": 50,
-  "loops": 1
+  "movex": 4,
+  "movey": 3,
+  "loops": 3,
+  "secs": 3,
+  "wkey": "LEFT"
 }
